FIX: Set z-index on Skip Link (#64)
closes #64

--- a/layouts/main/components/skip-link/skip-link.css
+++ b/layouts/main/components/skip-link/skip-link.css
@@ -5,6 +5,7 @@
   margin:             1em;
   position:           absolute;
   padding:            var(--text-padding);
+  z-index:            1;
 
   @media (prefers-color-scheme: dark) {
     background-color: var(--off-black);
